--- a/public/AngularApp/index.html
+++ b/public/AngularApp/index.html
@@ -55,8 +55,7 @@
 
 		<div ng-include="'pages/modal1.html'"></div>
 		
-		<div class="app" ng-swipe-right='Ui.turnOn("uiSidebarLeft")'
-		ng-swipe-left='Ui.turnOff("uiSidebarLeft")'>
+		<div class="app"> <!-- ng-swipe-right='Ui.turnOn("uiSidebarLeft")' ng-swipe-left='Ui.turnOff("uiSidebarLeft")'> -->
 
 			<!-- Navbars -->
 
